<resources>
    <string name="app_name">SmartTourist</string>
    <string name="Welcome_msg">Welcome To Smart Tourist Guides</string>
    <string name="email">Email</string>
    <string name="login_page">LOGIN PAGE</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="not_registered_yet_click_here">Not Registered Yet!, Click Here</string>
    <string name="enter_trip_plcaes">Enter Trip Plcaes</string>
    <string name="start_date">Start Date</string>
    <string name="hint_type">Please select type of trip</string>
    <string name="enter_trip_duration_no_of_days">Enter Trip Duration(no of Days)</string>
    <string name="enter_trip_price">Enter Trip Price</string>
    <string name="enter_the_places_covered_under_trip">Enter the Places covered under trip</string>
    <string name="add_trip">Add trip:</string>
    <string name="description">Description</string>
    <string name="main_image">Main Image</string>
    <string name="enter_budget">Enter Budget</string>
    <string-array name="trip_type">

        <item>Type Of Trip</item>
        <item>Adventure</item>
        <item>History</item>
        <item>Religion</item>
    </string-array>
</resources>