<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AddTripActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="143dp"
        android:layout_height="32dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="4dp"
        android:paddingLeft="5dp"
        android:text="@string/add_trip"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/trip_name"
        android:layout_width="383dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_back"
        android:ems="10"
        android:hint="Enter Trip Name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/trip_price"
        android:layout_width="383dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_back"
        android:ems="10"
        android:hint="@string/enter_trip_price"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_name" />

    <EditText
        android:id="@+id/trip_duration"
        android:layout_width="383dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_back"
        android:ems="10"
        android:hint="@string/enter_trip_duration_no_of_days"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_price" />

    <EditText
        android:id="@+id/trip_Places"
        android:layout_width="383dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_back"
        android:ems="10"
        android:hint="@string/enter_the_places_covered_under_trip"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_duration" />

    <Button
        android:id="@+id/trip_add"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#2B2B2B"
        android:text="ADD trip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_description"
        app:layout_constraintVertical_bias="0.0" />


    <DatePicker
        android:id="@+id/start_date"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="128dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/element_white"
        android:datePickerMode="calendar"
        android:endYear="2025"
        android:foreground="@drawable/calendar"
        android:headerBackground="@drawable/button_back"
        android:startYear="2022"
        app:layout_constraintEnd_toStartOf="@+id/end_date"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_Places" />

    <DatePicker
        android:id="@+id/end_date"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="132dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/element_white"
        android:endYear="2025"
        android:foreground="@drawable/calendar"
        android:headerBackground="@drawable/button_back"
        android:startYear="2022"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_Places" />

    <Spinner
        android:id="@+id/trip_type"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/register_editext_style"
        android:contentDescription="@string/hint_type"
        android:popupBackground="@drawable/field"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_date" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/image_border"
        android:src="@drawable/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_type" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/main_image"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/trip_type" />

    <EditText
        android:hint="@string/description"
        android:id="@+id/trip_description"
        android:layout_width="319dp"
        android:layout_height="109dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/register_editext_style"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="End Date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toEndOf="@+id/end_date"
        app:layout_constraintTop_toBottomOf="@+id/trip_Places" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="Start Date"
        app:layout_constraintStart_toEndOf="@+id/start_date"
        app:layout_constraintTop_toBottomOf="@+id/trip_Places" />

</androidx.constraintlayout.widget.ConstraintLayout>